--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
+
+
 {
   "name": "mon-api",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+    "start": "node index.js"
+    },
   "dependencies": {
     "express": "^4.18.2"
   }
-}
+  }
 
