--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 
 {
-  "name": "mon-api",
+  "name": "api-config",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -9,7 +9,7 @@
     "start": "node index.js"
     },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+     "serverless-http": "^3.1.1"
   }
   }
-
