--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
     { "src": "api/config.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/config.js" }
+    { "src": "/(.*)", "dest": "/api/config.js" }
   ]
 }
